force-app/main/default/objects/Legacy_Audit_Trail__c/Legacy_Audit_Trail__c.object-meta.xml
<CustomObject>
    <label>Legacy Audit Trail</label>
    <nameField>
        <label>Legacy Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy Audit Trail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>