force-app/main/default/objects/Legacy_Audit_Trail__c/fields/Audit_Source__c.field-meta.xml
<CustomField>
    <fullName>Audit_Source__c</fullName>
    <label>Audit Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>