force-app/main/default/objects/Legacy_Audit_Trail__c/fields/Business_Component__c.field-meta.xml
<CustomField>
    <fullName>Business_Component__c</fullName>
    <label>Business Component</label>
    <length>100</length>
    <type>Text</type>
</CustomField>