force-app/main/default/objects/Legacy_Audit_Trail__c/fields/Child_Business_Component__c.field-meta.xml
<CustomField>
    <fullName>Child_Business_Component__c</fullName>
    <label>Child Business Component</label>
    <length>100</length>
    <type>Text</type>
</CustomField>