force-app/main/default/objects/Legacy_Audit_Trail__c/fields/Employee_Login__c.field-meta.xml
<CustomField>
    <fullName>Employee_Login__c</fullName>
    <label>Employee Login</label>
    <length>100</length>
    <type>Text</type>
</CustomField>